// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipChart should render 1`] = `
<div>
  <table
    class="analytics-tooltip-chart custom-tooltip-class"
  >
    <thead
      class="analytics-tooltip-chart-header "
    >
      <tr
        class="analytics-tooltip-chart-row "
      >
        <td>
          <div
            class="analytics-tooltip-chart-content analytics-tooltip-chart-column text-left font-weight-normal"
          >
             
            title
          </div>
        </td>
        <td>
          <div
            class="analytics-tooltip-chart-content analytics-tooltip-chart-column text-left font-weight-normal"
          >
             
            description
          </div>
        </td>
      </tr>
    </thead>
    <tbody
      class="analytics-tooltip-chart-body "
    >
      <tr
        class="analytics-tooltip-chart-row class-custom-row"
      >
        <td
          style="min-width: 100px;"
        >
          <div
            class="analytics-tooltip-chart-content analytics-tooltip-chart-column class-custom-column-1 text-left font-weight-normal"
          >
            <div
              class="analytics-tooltip-chart-truncated"
            >
              <span
                class="circle"
                style="background-color: red; height: 8px; width: 8px;"
              />
               
              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius hic ex, vero laboriosam necessitatibus, repudiandae est voluptatem.
            </div>
          </div>
        </td>
        <td
          style="min-width: 50px;"
        >
          <div
            class="analytics-tooltip-chart-content analytics-tooltip-chart-column class-custom-column-2 text-right font-weight-semibold"
          >
             
            column 2 description
          </div>
        </td>
      </tr>
      <tr
        class="analytics-tooltip-chart-row "
      >
        <td>
          <div
            class="analytics-tooltip-chart-content analytics-tooltip-chart-column text-left font-weight-light"
          >
            <span
              class="circle"
              style="background-color: blue; height: 8px; width: 8px;"
            />
             
            column 1 title
          </div>
        </td>
        <td>
          <div
            class="analytics-tooltip-chart-content analytics-tooltip-chart-column text-right font-weight-semibold"
          >
             
            column 2 description
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TooltipTmpl should render 1`] = `
<div>
  <table
    class="analytics-tooltip-chart"
  >
    TooltipTmpl
  </table>
</div>
`;

exports[`TooltipTmpl.Body should render 1`] = `
<div>
  <tbody
    class="analytics-tooltip-chart-body "
  >
    Body
  </tbody>
</div>
`;

exports[`TooltipTmpl.Column should render 1`] = `
<div>
  <td>
    <div
      class="analytics-tooltip-chart-content analytics-tooltip-chart-column text-left font-weight-normal"
    >
      Column
    </div>
  </td>
</div>
`;

exports[`TooltipTmpl.Column should render as truncated 1`] = `
<div>
  <td>
    <div
      class="analytics-tooltip-chart-content analytics-tooltip-chart-column text-left font-weight-normal"
    >
      <div
        class="analytics-tooltip-chart-truncated"
      >
        Column
      </div>
    </div>
  </td>
</div>
`;

exports[`TooltipTmpl.Column should render w/ right alignment 1`] = `
<div>
  <td
    alignment="right"
  >
    <div
      class="analytics-tooltip-chart-content analytics-tooltip-chart-column text-left font-weight-normal"
    >
      Column
    </div>
  </td>
</div>
`;

exports[`TooltipTmpl.Column should render w/ weight of light 1`] = `
<div>
  <td>
    <div
      class="analytics-tooltip-chart-content analytics-tooltip-chart-column text-left font-weight-light"
    >
      Column
    </div>
  </td>
</div>
`;

exports[`TooltipTmpl.Header should render 1`] = `
<div>
  <thead
    class="analytics-tooltip-chart-header "
  >
    Header
  </thead>
</div>
`;

exports[`TooltipTmpl.Row should render 1`] = `
<div>
  <tr
    class="analytics-tooltip-chart-row "
  >
    Row
  </tr>
</div>
`;
